geeksforgeeks survey form commit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <form>
             <div class="barta">
                 <label for="name">Name:</label><br>
-                <input type="text" name="name" id="name" placeholder="your name">
+                <input type="text" name="name" id="name" placeholder="Md. Ratul Islam">
             </div><br>
             <div class="barta">
                 <label for="email">Email:</label><br>
